solved the horizontal scrolling problem

--- a/src/style/design.css
+++ b/src/style/design.css
@@ -34,7 +34,7 @@
  }
 
  body>div.footing {
-     margin: 5% 0 0;
+     margin: 0;
      background: #f6efe1;
  }
 
